add inner texts for elements

--- a/index.html
+++ b/index.html
@@ -14,41 +14,41 @@
 </head>
 <body>
     <ul class="offer">
-        <li class="offer__category"></li>
+        <li class="offer__category">Actions</li>
         <li class="offer__name">
-            <h2 class="offer__title"></h2>
-            <h4 class="offer__company"></h4>
-            <h4 class="offer__boost"></h4>
+            <h2 class="offer__title">Ethereum Classic combined with Zcash</h2>
+            <h4 class="offer__company">Ethereum foundation</h4>
+            <h4 class="offer__boost">Altcoins - highest growth</h4>
         </li>
         <li class="offer__price">
             <h2 class="offer__total">
-                <span class="offer__value offer__value--red"></span>
-                <span class="offer__currency"></span>
+                <span class="offer__value offer__value--red">2200</span>
+                <span class="offer__currency">PLN</span>
             </h2>
             <p class="offer__description">Wartość</p>
         </li>
         <li class="offer__history offer__history--d1">
-            <h3 class="offer__value"></h3>
+            <h3 class="offer__value">+0,91%</h3>
             <p class="offer__description">1D</p>
         </li>
         <li class="offer__history offer__history--m1">
-            <h3 class="offer__value"></h3>
+            <h3 class="offer__value">+0,91%</h3>
             <p class="offer__description">1M</p>
         </li>
         <li class="offer__history offer__history--m3">
-            <h3 class="offer__value"></h3>
+            <h3 class="offer__value">-2,29%</h3>
             <p class="offer__description">3M</p>
         </li>
         <li class="offer__history offer__history--m12">
-            <h3 class="offer__value"></h3>
+            <h3 class="offer__value">+0,42%</h3>
             <p class="offer__description">12M</p>
         </li>
         <li class="offer__history offer__history--m30">
-            <h3 class="offer__value"></h3>
+            <h3 class="offer__value">+0,85%</h3>
             <p class="offer__description">30M</p>     
         </li>
         <li class="offer__history offer__history--ytd">
-            <h3 class="offer__value"></h3>
+            <h3 class="offer__value">+1,31%</h3>
             <p class="offer__description">YTD</p>     
         </li>
         <li class="offer__select">
