missprint yellow bar

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <ul class="offer">
-        <li class="offer__category">Actions</li>
+        <li class="offer__category">Altcoins</li>
         <li class="offer__name">
             <h2 class="offer__title">Ethereum Classic combined with Zcash</h2>
             <h4 class="offer__company">Ethereum foundation</h4>
